# Snail-Math

./: CMakeLists.txt  LICENSE  Readme.md  smath.cpp  smath.hpp
docs/: changelog.md  contributing.md  unique.md
include/: basic.h  basic.hpp  gmt.h  gmt.hpp  primary.h
include/defs/: CNum.hpp  Num.h  constdef.h  constdef.hpp  typedef.h  typedef.hpp  using.hpp
source/: primary.cpp
